force-app/main/default/objects/Billing_Center_Action_Config__c/Billing_Center_Action_Config__c.object-meta.xml
<CustomObject>
    <description>Defines buttons or actions available on tabs or sections.</description>
    <label>Billing Center Action Config</label>
    <nameField>
        <displayFormat>BCACT-{00000}</displayFormat>
        <label>Billing Center Action Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Action Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>