force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refresh</fullName>
            </value>
            <value>
                <fullName>Modal</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Custom Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>