force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Button_Variant__c.field-meta.xml
<CustomField>
    <fullName>Button_Variant__c</fullName>
    <label>Button Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Destructive</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>