force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Message__c</fullName>
    <label>Confirmation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>