force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>