force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Handler_Key__c.field-meta.xml
<CustomField>
    <fullName>Handler_Key__c</fullName>
    <label>Handler Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>