force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Max_Selected_Rows__c.field-meta.xml
<CustomField>
    <fullName>Max_Selected_Rows__c</fullName>
    <label>Max Selected Rows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>