force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Requires_Selection__c.field-meta.xml
<CustomField>
    <fullName>Requires_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Selection</label>
    <type>Checkbox</type>
</CustomField>