force-app/main/default/objects/Billing_Center_Action_Config__c/fields/Tab_Config__c.field-meta.xml
<CustomField>
    <fullName>Tab_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tab Config</label>
    <referenceTo>Billing_Center_Tab_Config__c</referenceTo>
    <relationshipLabel>Billing Center Action Configs</relationshipLabel>
    <relationshipName>Billing_Center_Action_Configs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>